--- a/app/src/main/res/layout/activity_lessons_seven.xml
+++ b/app/src/main/res/layout/activity_lessons_seven.xml
@@ -22,8 +22,6 @@
                 android:layout_marginBottom="25dp"
                 android:orientation="vertical">
 
-
-
                 <TextView
                     style="@style/textViewZagolovok"
                     android:text="@string/lessons07_01" />
@@ -40,8 +38,7 @@
                     style="@style/textView"
                     android:text="@string/lessons07_04" />
 
-                <ImageView
-                    android:contentDescription="@string/less07_image01"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less07_image01"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -50,8 +47,7 @@
                     style="@style/textView"
                     android:text="@string/lessons07_05" />
 
-                <ImageView
-                    android:contentDescription="@string/less07_image02"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less07_image02"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -60,8 +56,7 @@
                     style="@style/textView"
                     android:text="@string/lessons07_06" />
 
-                <ImageView
-                    android:contentDescription="@string/less07_image03"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less07_image03"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -70,8 +65,7 @@
                     style="@style/textView"
                     android:text="@string/lessons07_07" />
 
-                <ImageView
-                    android:contentDescription="@string/less07_image04"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less07_image04"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -80,8 +74,7 @@
                     style="@style/textView"
                     android:text="@string/lessons07_08" />
 
-                <ImageView
-                    android:contentDescription="@string/less07_image05"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less07_image05"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -90,9 +83,9 @@
                     style="@style/textView"
                     android:text="@string/lessons07_09" />
 
-                <ImageView
-                    android:contentDescription="@string/less07_image06"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less07_image06"
+                    android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -112,10 +105,6 @@
                 <TextView
                     style="@style/textView"
                     android:text="@string/lessons07_12" />
-
-
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
