--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,10 +33,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">15dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">30sp</item>
-        <item name="android:textColor">@color/colorOrange</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/colorBlack90</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="button_style_previous">
