--- a/app/src/main/res/layout/activity_lessons_five_ariphmetics.xml
+++ b/app/src/main/res/layout/activity_lessons_five_ariphmetics.xml
@@ -26,32 +26,28 @@
 
                 <TextView
                     style="@style/textViewZagolovok"
-                    android:text="@string/ariphmetics_zagolovok" />
+                    android:text="@string/lessons05_24" />
 
                 <TextView
                     style="@style/textView"
                     android:text="@string/lessons05_01" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image01"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image01"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
-                <ImageView
-                    android:contentDescription="@string/less05_image02"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image02"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
-                <ImageView
-                    android:contentDescription="@string/less05_image03"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image03"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
-                <ImageView
-                    android:contentDescription="@string/less05_image04"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image04"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -60,8 +56,7 @@
                     style="@style/textView"
                     android:text="@string/lessons05_02" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image05"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image05"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -70,8 +65,7 @@
                     style="@style/textView"
                     android:text="@string/lessons05_03" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image06"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image06"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -80,8 +74,7 @@
                     style="@style/textView"
                     android:text="@string/lessons05_04" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image07"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image07"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -98,10 +91,9 @@
                     style="@style/textView"
                     android:text="@string/lessons05_07" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image08"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image08"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -114,13 +106,11 @@
                     style="@style/textView"
                     android:text="@string/lessons05_09" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image09"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image09"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
-
 
                 <TextView
                     style="@style/textViewZagolovok"
@@ -130,14 +120,11 @@
                     style="@style/textView"
                     android:text="@string/lessons05_11" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image10"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image10"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
-
-
 
                 <TextView
                     style="@style/textViewZagolovok"
@@ -147,10 +134,9 @@
                     style="@style/textView"
                     android:text="@string/lessons05_13" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image11"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image11"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -162,8 +148,7 @@
                     style="@style/textView"
                     android:text="@string/lessons05_15" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image12"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -172,8 +157,7 @@
                     style="@style/textView"
                     android:text="@string/lessons05_16" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image13"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image13"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -190,8 +174,7 @@
                     style="@style/textView"
                     android:text="@string/lessons05_19" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image14"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image14"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -208,8 +191,7 @@
                     style="@style/textView"
                     android:text="@string/lessons05_22" />
 
-                <ImageView
-                    android:contentDescription="@string/less05_image15"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less05_image15"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -217,8 +199,6 @@
                 <TextView
                     style="@style/textView"
                     android:text="@string/lessons05_23" />
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
