--- a/app/src/main/res/layout/activity_lessons_ten.xml
+++ b/app/src/main/res/layout/activity_lessons_ten.xml
@@ -41,8 +41,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_04" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image01"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image01"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -51,8 +50,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_05" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image02"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image02"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -61,8 +59,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_06" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image03"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image03"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -71,8 +68,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_07" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image04"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image04"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -80,7 +76,6 @@
                 <TextView
                     style="@style/textView"
                     android:text="@string/lessons10_08" />
-
 
                 <TextView
                     style="@style/textViewZagolovok"
@@ -90,8 +85,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_10" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image05"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image05"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -100,8 +94,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_11" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image06"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image06"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -110,8 +103,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_12" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image07"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image07"
                     android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
@@ -125,8 +117,7 @@
                     style="@style/textView"
                     android:text="@string/lessons10_14" />
 
-                <ImageView
-                    android:contentDescription="@string/less10_image08"
+                <com.zolad.zoominimageview.ZoomInImageView
                     android:id="@+id/less10_image08"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -135,10 +126,6 @@
                     style="@style/textView"
                     android:layout_marginBottom="20dp"
                     android:text="@string/lessons10_15" />
-
-
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
