--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -25,8 +25,8 @@
         />
     <item
         android:id="@+id/ic_other"
-        android:icon="@drawable/ic_other_bottom"
-        android:title="@string/other_bottom"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/settings"
         />
 
 
